--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
       # runs a single command / script
       - name: run curl download script
-          run: curl -O https://kirchhoffs.de/index.html
+          run: ./bin/get_file.sh
 
       # run a multiline script
       - name: Multiline Script
